Update production API URL for backend connection

--- a/client/.env.production
+++ b/client/.env.production
@@ -2,4 +2,4 @@
 # This file is used when building for production deployment
 
 # Your Render backend web service URL
-VITE_API_BASE_URL=https://your-backend-api.onrender.com
+VITE_API_BASE_URL=https://food-hub-apx3.onrender.com
