Fix production deployment issues

--- a/client/.env.example
+++ b/client/.env.example
@@ -3,10 +3,14 @@
 # ====================================
 # Copy to .env.local for local development
 
-# Backend API URL
-# Local dev (default - make sure backend runs on port 8000)
-VITE_API_BASE_URL=http://localhost:8000
+# Backend API URL (REQUIRED)
+# Local dev: Must match your backend service (typically http://localhost:3000)
+VITE_API_BASE_URL=http://localhost:3000
 
-# Production example (update with your actual Render backend URL)
-# VITE_API_BASE_URL=https://your-backend-api.onrender.com
+# Production: Update with your actual Render BACKEND URL (not frontend!)
+# Example: https://food-hub-apx3.onrender.com
+
+# Optional: Stripe publishable key for client-side payment processing
+# Only required if using Stripe Elements/Payment Intent on frontend
+# VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
 
