--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,7 @@
 # ====================================
 # Server Configuration
 # ====================================
-PORT=8000
+PORT=3000
 NODE_ENV=production
 
 # ====================================
@@ -17,7 +17,7 @@ MONGO_URI=your_mongodb_connection_string
 # ====================================
 # JWT Secret
 # ====================================
-JWT_SECRET=your_jwt_secret_key_here
+SECRET_KEY=your_jwt_secret_key_here
 
 # ====================================
 # Resend Email Configuration
@@ -30,14 +30,19 @@ RESEND_API_KEY=re_your_resend_api_key
 RESEND_FROM_EMAIL=onboarding@resend.dev
 
 # ====================================
-# Frontend & Backend URLs
+# Frontend & Backend URLs (PRODUCTION CRITICAL)
 # ====================================
 # Your Render static site URL (frontend)
-# Example: https://your-app-name.onrender.com
-FRONTEND_URL=https://your-frontend-app.onrender.com
+# THIS MUST MATCH YOUR DEPLOYED FRONTEND URL EXACTLY
+# Example: https://food-hub-1-732u.onrender.com
+CLIENT_URL=https://your-frontend-app.onrender.com
+
+# Alternative (legacy support): FRONTEND_URL is used as fallback
+# FRONTEND_URL=https://your-frontend-app.onrender.com
 
 # Your Render web service URL (backend)
-# Example: https://your-backend-api.onrender.com
+# Used for email links and verification
+# Example: https://food-hub-apx3.onrender.com
 BACKEND_URL=https://your-backend-api.onrender.com
 
 # ====================================
@@ -50,11 +55,14 @@ CLOUDINARY_API_SECRET=your_api_secret
 # ====================================
 # Stripe Payment Configuration
 # ====================================
+# Get from: https://dashboard.stripe.com/keys
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+
+# Get from: https://dashboard.stripe.com/webhooks
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # ====================================
-# CORS Configuration
+# Email Verification (Optional)
 # ====================================
-# Add your frontend URL here for CORS
-CLIENT_URL=https://your-frontend-app.onrender.com
+# Set to override email in development (bypasses Resend)
+# RESEND_OVERRIDE_EMAIL=dev@example.com
