--- a/client/.env.production
+++ b/client/.env.production
@@ -2,8 +2,8 @@
 # This file is used when building for production deployment
 
 # Your Render backend web service URL
-# MUST point to backend API service (https://food-hub-apx3.onrender.com)
-VITE_API_BASE_URL=https://food-hub-apx3.onrender.com
+# MUST point to backend API service
+VITE_API_BASE_URL=https://food-hub-2-jk1r.onrender.com
 
 # Optional: Stripe publishable key for frontend payment processing
 # VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_key_here
